--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 #map {
-    height: 100vh;
+    height:100vh;
 }
 
 #map-container {
@@ -8,50 +8,117 @@
 
 #search-container {
     position: absolute;
-    top: 2%;
-    left: 55px;
+    top: 15%;
+    left: 1px;
     z-index: 30000;
-    background-color: rgba(255,255,255,0.5);
-    /* the height container, depending on its content, can be more than 25px. 
-    But when it has no content, it has to be 25px */
-    min-height: 25px; 
-    width: 300px;
-    padding-top: 15px;
-    padding-bottom: 10px;
-    padding-left: 10px;
+    height: 10px; 
+    width: 350px;
+    background-origin: padding-box;
     display: none;
 }
 
 #results {
-    max-height: 300px;
-    overflow-y:scroll;
+    max-height: 180px;
+    overflow-y: scroll;
+    background-color: rgba(210, 210, 210, 0.5); 
+    width: 240px;   
 }
 
 .search-result {
-    margin:5px;
+    margin: 2px;
+    color: black;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 #btnToggleSearch {
     position: absolute;
     left: 50px;
-    top: 10px;
+    top: 20px;
     z-index: 300000;
+    color:black;
+    font-size:larger;
+    font-weight: bold;
+    background-color: yellow;
+    border-radius: 15px;
 }
 
-.popup{
+@media (min-width: 768px) {
+    /* because the div is a block-level element, so we use display: block */
+    #search-container {
+        display: block; 
+        left: 2%;
+    }
+
+    #btnToggleSearch {
+        /*display: none;*/
+        visibility: hidden;
+        position: center; 
+    }
+
+    /*
+    #searchTerms {
+        min-width: 300px;
+        height: 50px;
+        margin-top: 1px;
+        position: center;
+        background-origin: padding-box;
+    }
+
+    .btnSearch {
+        background-color:#9deafa;
+        background-origin: padding-box;
+        visibility: hidden;
+    }
+    */
+}
+
+.btnDropdown {
+    background-color: rgb(0, 195, 255, 0.9); 
+    font-weight: bold;
+    font-size: 18px;
+    position: right;
+    color: white;
+    border: 5px solid;
+    border-color: black;
+    padding: 10px;
+    box-shadow: 4px;
+    width: 240px;   
+} 
+
+
+/* leaflet */ 
+.popup {
+    font-size: 18px;
+    line-height: 1;
+    position: center;
     overflow: scroll;
     width:300px;
     height:300px;
 }
 
-@media (min-width: 767px) {
-    /* because the div is a block-level element, so we use display: block */
-    #search-container {
-        display: block; 
-        left: 5%;
-    }
+.leaflet-popup-content p {
+    margin: 17px 0;
+    margin: 1.3em 0;
+    font-size: 16px;
+    font-weight: bold;
+    text-decoration-color: blue;
+}
 
-    #btnToggleSearch {
-        display: none;
-    }
+.leaflet-control {
+    position: relative;
+    z-index: 800;
+    pointer-events: visiblePainted; /* IE 9-10 doesn't have auto */
+    pointer-events: auto;
+    color: blue;
+    font-weight: bold;
+}  
+
+.leaflet-control-zoom-in {
+    background-color: yellow;
+    font-size: small;
+}
+
+.footer {
+    max-height: 10px;
 }
